fix overlap's problem; updated css

--- a/src/App.css
+++ b/src/App.css
@@ -165,8 +165,8 @@
   margin-top: 5px;
 }
 
-.top60 {
-  margin-top: 3vh;
+.top43 {
+  margin-top: 43px;
 }
 
 .bottom45 {
